# narrowfield-plugins

./: README.md  plugins.json
plugins/sr-api/src/sr_api/: __init__.py
plugins/sr-csv/: pyproject.toml
plugins/sr-csv/src/sr_csv/: __init__.py
plugins/sr-eightfold/src/sr_eightfold/: __init__.py
plugins/sr-webhook/: pyproject.toml
plugins/sr-webhook/src/sr_webhook/: __init__.py
